добавил tabindex -1 в окне 20.11.2020

--- a/src/index.html
+++ b/src/index.html
@@ -125,7 +125,7 @@
 
       <fieldset>
         <legend id="modalTitle">Панграмма с другого сайта</legend>
-        <p id="modalDesc">Здесь фабула объять не может всех эмоций — шепелявый скороход в юбке тащит горячий мёд.</p>
+        <p id="modalDesc"><a href="#">Здесь</a> <span tabindex="0">фабула</span> <input type="text" value="объять"> не может всех эмоций — шепелявый скороход в юбке тащит горячий мёд.</p>
       </fieldset>
     </div>
   </div>
