открытие окна - часть первая

--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,11 @@
         <!-- <li>blur</li> -->
       </ol>
 
+      <button>
+        <div><span></span></div>
+      </button>
+
+      <a href=""></a>
     </section>
 
     <section>
