анимация закрытия/открытия 23.11.2020

--- a/src/index.html
+++ b/src/index.html
@@ -83,12 +83,13 @@
       </ol>
 
     </section>
-
+    
+    <hr>
     <section>
       <h2>открываем окна</h2>
-
       <button class="btn" data-bolt="bolt-1">открыть окно 1</button>
       <button class="btn" data-bolt="bolt-2" tabindex="6">открыть окно 2</button>
+      <button class="btn btn-2" data-bolt="bolt-2">открыть окно 2</button>
     </section>
 
     <section>
