--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,10 @@
       color: aliceblue;
     }
 
+    .btn:focus {
+      background-color: #f00;
+    }
+
     fieldset {
       display: block;
       margin: 0;
