--- a/src/index.html
+++ b/src/index.html
@@ -99,21 +99,15 @@
     <section>
       <h2>Русские панграммы</h2>
 
-      <fieldset>
-        <legend>Присутствуют все буквы. Прислала Ирина</legend>
+        <p>Присутствуют все буквы. Прислала Ирина</p>
         <p>Эй, цирюльникъ, ёжик выстриги, да щетину ряхи сбрей, феном вошь за печь гони!</p>
-      </fieldset>
 
-      <fieldset>
-        <legend>33 буквы. Из журнала «Наука и жизнь»</legend>
+        <p>33 буквы. Из журнала «Наука и жизнь»</p>
         <p>Экс-граф? Плюш изъят. Бьём чуждый цен хвощ!</p>
-      </fieldset>
 
-      <fieldset>
-        <legend>33 буквы. По преданию, придумана профессором комбинаторики Санкт-Петербургского государственного
-          университета. Прислал Виктор Баргачев</legend>
+        <p>33 буквы. По преданию, придумана профессором комбинаторики Санкт-Петербургского государственного
+          университета. Прислал Виктор Баргачев</p>
         <p>Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф.</p>
-      </fieldset>
     </section>
 
   </main>
@@ -123,11 +117,9 @@
   <div class="bolt-container">
     <button class="bolt-close" aria-label="close"></button>
 
-    <fieldset>
-      <legend id="modalTitle">Панграмма с другого сайта</legend>
+      <h2 id="modalTitle">Панграмма с другого сайта</h2>
       <p id="modalDesc"><a href="#">Здесь</a> <span tabindex="0">фабула</span> <input type="text" value="объять"> не
         может всех эмоций — шепелявый скороход в юбке тащит горячий мёд.</p>
-    </fieldset>
   </div>
 </div>
 
@@ -137,10 +129,8 @@
   <div class="bolt-container">
     <button class="bolt-close" aria-label="close"></button>
 
-    <fieldset>
-      <legend id="modalTitle">типа заголовок</legend>
+      <h2 id="modalTitle">типа заголовок</h2>
       <p id="modalDesc"><a href="#">Здесь</a> <span tabindex="0">типа</span> <input type="text" value="какой-то"> текст</p>
-    </fieldset>
   </div>
 </div>
 
