поменял bolt-popup--hidden на hidden

--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
     </section>
 
   </main>
-<div class="bolt-popup bolt-popup--hidden" role="dialog" aria-lebelledby="modalTitle" aria-describedby="modalDesc" data-target-popup="bolt-1"
+<div class="bolt-popup" role="dialog" aria-lebelledby="modalTitle" aria-describedby="modalDesc" data-target-popup="bolt-1"
   aria-hidden="true">
 
   <div class="bolt-popup-container">
@@ -121,7 +121,7 @@
   </div>
 </div>
 
-<div class="bolt-popup bolt-popup--hidden" role="dialog" aria-lebelledby="modalTitle" aria-describedby="modalDesc" data-target-popup="bolt-2"
+<div class="bolt-popup" role="dialog" aria-lebelledby="modalTitle" aria-describedby="modalDesc" data-target-popup="bolt-2"
   aria-hidden="true">
 
   <div class="bolt-popup-container">
