--- a/src/index.html
+++ b/src/index.html
@@ -96,13 +96,11 @@
 
   </main>
 
-  <div class="bolt-popup bolt-popup--visible">
-    <div class="bolt-popup__container">
-      <button class="bolt-popup__close"></button>
-      <p>Далеко-далеко за словесными горами в стране.</p>
-      <p>Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. Необходимыми первую своего жизни безорфографичный семантика свою города журчит эта!</p>
-    </div>
-  </div>
+  <div 
+  class="bolt-popup bolt-popup--visible"
+  aria-hidden="true"
+  role="dialog"
+  ></div>
 
   <script src="./js/main.js"></script>
 </body>
