for video html+less 05.12.20-14:35

--- a/src/index.html
+++ b/src/index.html
@@ -100,7 +100,13 @@
   class="bolt-popup bolt-popup--visible"
   aria-hidden="true"
   role="dialog"
-  ></div>
+  >
+
+  <div class="bolt-popup__container">
+    <p>Подъехал шофёр на рефрижераторе грузить яйца для обучающихся элитных медиков.</p>
+  </div>
+  
+</div>
 
   <script src="./js/main.js"></script>
 </body>
