--- a/src/index.html
+++ b/src/index.html
@@ -97,12 +97,13 @@
   </main>
 
   <div 
-  class="bolt-popup bolt-popup--visible"
+  class="bolt-popup"
   aria-hidden="true"
   role="dialog"
   >
 
   <div class="bolt-popup__container">
+    <button class="bolt-popup__close" aria-label="Close"></button>
     <p>Подъехал шофёр на рефрижераторе грузить яйца для обучающихся элитных медиков.</p>
   </div>
   
