--- a/src/index.html
+++ b/src/index.html
@@ -75,9 +75,9 @@
     
     <section>
       <h2>открываем окна</h2>
-      <button class="btn" data-BoltPopup="bolt-1">открыть окно 1</button>
-      <button class="btn" data-BoltPopup="bolt-2" tabindex="6">открыть окно 2</button>
-      <button class="btn btn-2" data-BoltPopup="bolt-2">открыть окно 2</button>
+      <button class="btn" dada-target-popup="popup-1">открыть окно 1</button>
+      <button class="btn">открыть окно 2</button>
+      <button class="btn btn-2">открыть окно 2</button>
     </section>
 
     <section>
@@ -100,11 +100,12 @@
   class="bolt-popup"
   aria-hidden="true"
   role="dialog"
+  dada-path-popup="popup-1"
   >
 
   <div class="bolt-popup__container">
     <button class="bolt-popup__close" aria-label="Close"></button>
-    <p>Подъехал шофёр на рефрижераторе грузить яйца для обучающихся элитных медиков.</p>
+    <p>Подъехал <span tabindex="2">шофёр</span> на рефрижераторе грузить яйца для обучающихся элитных медиков.</p>
   </div>
   
 </div>
