--- a/src/index.html
+++ b/src/index.html
@@ -76,7 +76,7 @@
     <section>
       <h2>открываем окна</h2>
       <button class="btn" dada-target-popup="popup-1">открыть окно 1</button>
-      <button class="btn">открыть окно 2</button>
+      <button class="btn" tabindex="5">открыть окно 2</button>
       <button class="btn btn-2">открыть окно 2</button>
     </section>
 
