--- a/src/index.html
+++ b/src/index.html
@@ -96,23 +96,26 @@
 
   </main>
 
-  <div 
+  <div
+
+  aria-lebelledby="modalTitle"
+  aria-describedby="modalDesc"
+
   class="bolt-popup"
-  aria-hidden="true"
   role="dialog"
   dada-path-popup="popup-1"
   >
 
   <div class="bolt-popup__container">
     <button class="bolt-popup__close" aria-label="Close"></button>
-    <p>Подъехал <span tabindex="2">шофёр</span> на рефрижераторе грузить яйца для обучающихся элитных медиков.</p>
+    <h2 id="modalTitle">Это заголовок окна</h2>
+    <p id="modalDesc">Подъехал <span tabindex="2">шофёр</span> на рефрижераторе грузить яйца для обучающихся элитных медиков.</p>
   </div>
   
 </div>
 
 <div 
 class="bolt-popup"
-aria-hidden="true"
 role="dialog"
 dada-path-popup="popup-2"
 >
