--- a/src/index.html
+++ b/src/index.html
@@ -120,7 +120,7 @@
   <script src="./js/main.min.js"></script>
 
   <script>
-    window.onload = () => {
+    window.onload = function() {
       // создаем объекты для окон
       let popup1 = new BoltPopup(document.querySelector('[dada-path-popup="popup-1"]'))
       let popup2 = new BoltPopup(document.querySelector('[dada-path-popup="popup-2"]'))
