--- a/src/index.html
+++ b/src/index.html
@@ -38,94 +38,27 @@
 </head>
 
 <body>
-  <main>
 
-    <section>
-      <h1>Модальные окна</h1>
+  <h1>Модальные окна</h1>
 
-      <ol>
-        <li>
-          атрибуты
-          <ul>
-            <li>role="dialog"</li>
-            <li>aria-lebelledby="modalTitle"</li>
-            <li>aria-describedby="modalDesc"</li>
-          </ul>
-        </li>
-        <li>подложка с прозрачным фоном</li>
-        <li>
-          скрыть окно
-          <ul>
-            <li>aria-hidden="true"</li>
-            <li>tabindex="-1"</li>
-            <li>class="visually-hidden"</li>
-          </ul>
-        </li>
-        <li>несколько способов закрыть окно</li>
-        <li>"правильная" кнопка закрыть</li>
-        <li>нажатие на кнопку "esc"</li>
-        <li>переходы по клавиатуре</li>
-        <li>запрет скролла</li>
-        <li>анимация</li>
-      </ol>
+  <h2>открываем окна</h2>
 
-    </section>
-
-    <hr>
-
-    <section>
-      <h2>открываем окна</h2>
-      <button class="btn" dada-target-popup="popup-1">открыть окно 1</button>
-      <button class="btn" tabindex="5" dada-target-popup="popup-2">открыть окно 2</button>
-      <button class="btn btn-2" dada-target-popup="popup-2">открыть окно 2</button>
-    </section>
-
-    <section>
-      <h2>Русские панграммы</h2>
-
-      <p>Присутствуют все буквы. Прислала Ирина</p>
-      <p>Эй, цирюльникъ, ёжик выстриги, да щетину ряхи сбрей, феном вошь за печь гони!</p>
-
-      <p>33 буквы. Из журнала «Наука и жизнь»</p>
-      <p>Экс-граф? Плюш изъят. Бьём чуждый цен хвощ!</p>
-
-      <p>33 буквы. По преданию, придумана профессором комбинаторики Санкт-Петербургского государственного
-        университета. Прислал Виктор Баргачев</p>
-      <p>Эй, жлоб! Где туз? Прячь юных съёмщиц в шкаф.</p>
-    </section>
-
-  </main>
-
-  <div aria-lebelledby="modalTitle" aria-describedby="modalDesc" class="bolt-popup" role="dialog"
-    dada-path-popup="popup-1">
-
-    <div class="bolt-popup__container">
-      <button class="bolt-popup__close" aria-label="Close"></button>
-      <h2 id="modalTitle">Это заголовок окна</h2>
-      <p id="modalDesc">Подъехал <span tabindex="2">шофёр</span> на рефрижераторе грузить яйца для обучающихся элитных
-        медиков.</p>
-    </div>
-
+  <div>
+    <button class="btn">открыть окно</button>
   </div>
 
-  <div class="bolt-popup" role="dialog" dada-path-popup="popup-2">
-
-    <div class="bolt-popup__container">
-      <button class="bolt-popup__close" aria-label="Close"></button>
-      <p>Обдав его удушающей пылью, множество ярких фаэтонов исчезло из цирка.</p>
+  <dialog class="dialog">
+    <div class="dialog__content">
+      <button class="btn dialog__close" type="button">закрыть</button>
+      <p>Завершён ежегодный съезд эрудированных школьников, мечтающих глубоко проникнуть в тайны физических явлений и
+        химических реакций.</p>
     </div>
+  </dialog>
 
-  </div>
+  <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Назад запятых его переулка рекламных продолжил прямо сих, ipsum напоивший которой, рыбного грамматики одна там пунктуация деревни но вопроса. Дороге он напоивший страну грамматики журчит переписывается имени использовало гор но заголовок, что выйти текст маленький пор, продолжил первую семь рыбными она злых агентство! Взобравшись, бросил продолжил. Своего семантика даль от всех последний предложения пояс родного, но строчка букв большого. Если своих, языкового безорфографичный своего меня жаренные ручеек мир там продолжил сбить всеми, даль взгляд вопрос эта пор курсивных пустился путь грустный рукописи гор всемогущая! Великий путь буквоград решила правилами агентство запятой текстов не там ручеек меня! Назад образ правилами свой решила но семантика текст. Коварный от всех, свою своего инициал буквенных которой выйти маленький решила. Буквенных знаках инициал путь продолжил рыбного, деревни океана ручеек вопрос имеет большой. Ты, безорфографичный ему курсивных снова он раз рукописи предложения имеет. Путь одна предупреждал, маленький свой языком взобравшись ее повстречался реторический его жаренные великий рыбного заманивший речью безорфографичный своего продолжил собрал ipsum решила деревни себя прямо маленькая заглавных текст! Пор последний пустился букв составитель языком коварных дороге обеспечивает города алфавит необходимыми, от всех злых они возвращайся великий. Злых последний ведущими, свою наш свой пустился речью своих даль повстречался над деревни напоивший своего щеке! Запятых, снова продолжил буквенных маленькая семь использовало взгляд злых? Lorem домах прямо власти до деревни первую повстречался себя, вершину букв заглавных своих, однажды свой заголовок они? Снова бросил языкового, свой подзаголовок там повстречался родного напоивший имени текстами себя семантика вскоре прямо дал курсивных злых. Текстами свой рукописи составитель диких. Снова решила повстречался выйти подзаголовок языкового проектах гор рот использовало жизни. Строчка выйти скатился рыбными свое имеет злых! Курсивных что рот вопрос но единственное наш все то жаренные алфавит переписали! Злых журчит буквоград лучше за имени если свой пустился он знаках до безопасную рукопись вдали рыбного последний которой, гор, языкового путь. Которой, агентство рукопись, инициал встретил своих запятой наш сих все силуэт не подпоясал послушавшись рыбными строчка текстами журчит гор, точках о однажды жаренные осталось имени даль но? Пустился домах прямо инициал единственное которой себя алфавит строчка имеет. Языкового собрал все она сбить единственное всемогущая живет жизни переписывается домах моей, рыбными щеке мир на берегу своих продолжил вскоре о власти пустился гор первую за текстами. Обеспечивает страну, большой она предупредила, правилами пустился рот использовало злых подзаголовок, жизни имени. До текстов меня ручеек проектах заманивший. Запятых, но? Его, дал инициал маленькая, пор домах свой, вопроса свое сбить заголовок текст большого последний своего знаках наш коварных языком правилами буквенных. Путь, ipsum! Инициал, о? Рекламных свой себя, подпоясал взобравшись курсивных до грамматики свою силуэт букв эта путь, предупреждал запятых дорогу? Буквенных назад сих парадигматическая что большой страна бросил агентство языкового одна, дал использовало себя текстами, предупредила домах ведущими последний дороге, буквоград страну щеке предложения рекламных по всей. Грустный то родного маленький города переписали! Сбить необходимыми приставка великий инициал языкового заглавных, вопроса переулка всеми которой. Рукописи грамматики переписали текстов рыбными города вопроса великий продолжил вопрос пунктуация встретил! Текстов оксмокс своего, lorem, реторический себя домах всеми лучше по всей подпоясал ipsum, одна алфавит предупреждал текста? Эта ему вопрос знаках коварных если всемогущая страну, снова, заглавных но рыбными, прямо себя великий по всей точках дал обеспечивает родного семантика деревни. Необходимыми, заманивший меня проектах она щеке эта напоивший! Напоивший по всей наш предупреждал, осталось но вопроса снова это большой бросил грамматики толку lorem домах свой оксмокс буквоград несколько! Даже последний составитель до путь, рукопись вскоре переулка! О вершину парадигматическая своего текста скатился подпоясал. Жизни строчка вскоре языкового великий страну мир большого пояс свою необходимыми одна океана взобравшись, единственное ты себя переписали курсивных свое текстов языком пор ведущими о предупреждал до. Оксмокс меня образ одна буквенных предложения ipsum до. Продолжил, страна это меня языкового грустный семантика всемогущая снова, взобравшись коварный раз злых текста знаках своего дороге, океана последний на берегу первую. Грустный текста что взобравшись инициал. Приставка мир но переулка всемогущая маленький текста, домах строчка все рот безорфографичный составитель своих щеке родного деревни, свою прямо одна бросил алфавит, себя ее рекламных. Страна маленькая, лучше букв пунктуация взобравшись моей всемогущая! Безорфографичный города вскоре осталось раз диких заманивший своих домах меня текст снова необходимыми большой жаренные рыбного пор одна, злых маленький рекламных продолжил предупредила страна моей назад! Маленький родного океана жаренные ты, даль рукопись которое злых великий знаках имени от всех коварный.</p>
 
   <script src="./js/main.min.js"></script>
 
-  <script>
-    window.onload = function() {
-      // создаем объекты для окон
-      let popup1 = new BoltPopup(document.querySelector('[dada-path-popup="popup-1"]'))
-      let popup2 = new BoltPopup(document.querySelector('[dada-path-popup="popup-2"]'))
-    }
-  </script>
 </body>
 
 </html>
