--- a/src/index.html
+++ b/src/index.html
@@ -2,109 +2,67 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="css/style.css">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      min-height: 100vh;
-    }
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+	<link rel="stylesheet" href="styles/main.css">
+	<style>
+		body {
+			margin: 0;
+			padding: 0;
+			min-height: 100vh;
+		}
 
-    section {
-      padding: 20px 15px;
-    }
+		section {
+			padding: 20px 15px;
+		}
 
-    h1,
-    h2 {
-      margin: 0 0 0.83em;
-    }
+		h1,
+		h2 {
+			margin: 0 0 0.83em;
+		}
 
-    .btn {
-      margin: 5px;
-      padding: 5px;
-      background-color: #126815;
-      border: none;
-      border-radius: 5px;
-      color: aliceblue;
-    }
+		.btn {
+			margin: 5px;
+			padding: 5px;
+			background-color: #126815;
+			border: none;
+			border-radius: 5px;
+			color: aliceblue;
+		}
 
-    .btn:focus {
-      background-color: #f00;
-    }
-  </style>
+		.btn:focus {
+			background-color: #f00;
+		}
+	</style>
 </head>
 
 <body>
 
-  <h1>Модальные окна</h1>
+	<div class="body">
 
-  <h2>открываем окна</h2>
+		<button class="btn" data-dialog="dialog-1">открыть</button>
+		<button class="btn" data-dialog="dialog-2">открыть</button>
 
-  <div>
-    <button class="btn">открыть окно</button>
-  </div>
+		<p>Далеко-далеко за словесными горами в стране гласных, и согласных живут рыбные тексты. Семь вершину маленький переулка там наш коварных, вопроса текст, текстами, страна несколько страну скатился! Агентство которой скатился строчка вопрос языкового о они? Которой пор мир текстами вопрос своих семь на берегу. Сих которой взгляд повстречался мир послушавшись ему, вопроса грамматики рыбного, что страна, свою домах над. По всей моей использовало залетают свою его океана заманивший языком то составитель, он всемогущая решила над своего пунктуация бросил. Толку возвращайся эта домах над решила назад парадигматическая маленький, грамматики своих текст, напоивший, текстами великий большой рыбного запятых океана последний одна которое продолжил безорфографичный оксмокс. Использовало, речью они семь свое но возвращайся сбить ты своего над, имени океана лучше однажды пустился? Вскоре заголовок буквоград рыбного это диких свою родного, жаренные прямо все своих, своего снова запятой ведущими возвращайся там назад сбить! Пустился точках переулка злых ручеек своих то большой до несколько буквенных, от всех встретил lorem домах, коварных жаренные однажды они что там она языком раз алфавит? Его если безорфографичный жаренные, скатился семь ручеек последний текст рукопись оксмокс свое. Домах переписывается реторический рыбными однажды ему они живет алфавит строчка? Решила, свою строчка имени эта собрал но образ алфавит, пор запятой вопроса переулка снова они не возвращайся буквенных, первую прямо предупредила журчит напоивший. Которой, парадигматическая раз? Буквенных океана до, ему дорогу текстов выйти текста предложения, семантика безопасную маленькая семь напоивший своего всеми оксмокс силуэт продолжил букв? Путь над точках то пунктуация всеми коварных, переписывается встретил текстами заманивший жизни! Запятых встретил дал своих но там одна пояс языком решила сих, своего большого до обеспечивает снова что речью даль маленькая меня от всех необходимыми рукописи текст щеке имени. Вопрос себя скатился семантика если рекламных, лучше его жизни своих пор но домах они алфавит то своего меня, власти, дороге на берегу приставка! Приставка, сбить безопасную дорогу образ моей маленькая пояс ручеек себя напоивший сих большой от всех, текстов речью великий буквоград, запятых домах. Дороге повстречался послушавшись парадигматическая не буквенных щеке, коварных родного языкового собрал вопроса они что встретил вопрос свой, своего дал составитель запятых выйти! Своего, рот продолжил возвращайся последний коварный то снова всеми свое ведущими, себя родного дал. Рукописи маленькая путь букв алфавит рукопись города. Текст снова большого до заголовок путь то единственное наш меня языком, напоивший предупреждал ее живет коварный! До текста семь она маленькая свою свой запятых переписывается, предупредила предложения, назад, если всемогущая пунктуация! Не рукописи, первую он до даже текст деревни однажды языкового живет знаках агентство пояс рекламных курсивных это? Одна, они ему! Образ решила не залетают за. <button class="btn" data-dialog="dialog-1">открыть это же</button> Маленький буквенных приставка выйти, родного ipsum себя заманивший безорфографичный рукопись вдали бросил жизни щеке но напоивший, языком, океана инициал о своего букв lorem? Пунктуация по всей пустился предложения за она он, вопроса вопрос которой страну, свою продолжил диких курсивных семь составитель рот заголовок силуэт себя если раз использовало. Одна запятой там продолжил строчка путь буквенных, на берегу коварных агентство но! Предупреждал переписали рекламных силуэт имеет вершину семь даже единственное своего подпоясал рот! Буквенных пустился страна выйти переписывается своих парадигматическая, строчка путь рекламных страну напоивший проектах до точках грустный города если, свой ему, собрал вершину текстов своего журчит несколько рот большой. Пояс страна выйти продолжил рыбными страну однажды всеми от всех великий сбить одна прямо вопрос, диких подзаголовок пунктуация первую. Грамматики там своих рот вдали, дороге маленький, бросил от всех взгляд прямо буквенных встретил свой силуэт снова скатился lorem о вопрос. Моей вдали предупреждал ведущими рекламных семантика над даль текст, знаках всемогущая встретил, предложения рот алфавит имеет бросил парадигматическая которой великий путь о первую несколько составитель она пор грустный семь. Страна встретил запятых первую образ точках жизни запятой они он на берегу это большой, домах снова несколько щеке необходимыми, букв все проектах там текст семантика предупреждал языкового единственное безопасную деревни. Всемогущая силуэт, встретил скатился там залетают составитель языком, алфавит, семь злых правилами ручеек запятых. Запятой предложения которой деревни толку сбить города последний они однажды запятых текстов собрал вопрос продолжил своих страну жизни эта мир большого всемогущая, снова щеке? Большого вдали мир коварных на берегу себя. Запятой ведущими единственное страна, коварных рекламных своего грустный реторический рукописи грамматики свой домах меня вопрос над большого образ подзаголовок большой буквоград агентство залетают маленький? Пояс, своего пустился запятых которое все безопасную оксмокс жизни текста, всеми ее речью всемогущая, жаренные предупреждал за залетают они последний диких ipsum семантика алфавит реторический ручеек мир вершину! Всеми, жаренные, имени своих букв напоивший свой однажды снова ведущими рыбными то, власти ipsum бросил приставка необходимыми запятых взгляд безорфографичный знаках сбить. Продолжил рукопись рекламных имени всеми все которой переписывается, над коварных, выйти текст безопасную лучше диких он, там составитель встретил сбить всемогущая. Выйти на берегу сих буквенных языком речью, свое собрал по всей, все правилами необходимыми прямо оксмокс парадигматическая, послушавшись даль деревни переписывается осталось вершину. Продолжил необходимыми свою послушавшись города осталось дал подзаголовок, использовало свое вопрос однажды текстов lorem что его грамматики рукописи первую! Приставка раз, родного безорфографичный но всеми щеке свой дал использовало коварный пояс даль города, даже последний взобравшись проектах буквоград переписывается точках бросил, имеет сих коварных? Меня путь моей алфавит составитель, взобравшись если силуэт диких наш имени, своих необходимыми букв одна! Повстречался океана которой использовало свою? Страна свой бросил жизни своих букв имени инициал текстов. Выйти однажды, рукописи возвращайся сбить первую проектах? Маленький заманивший он собрал коварных, предупредила дорогу. Родного, о! Пояс, моей! Всемогущая взобравшись заманивший океана снова но большой продолжил, раз своих первую обеспечивает рот заголовок эта не предупредила текстами послушавшись? Большой послушавшись не имеет журчит всемогущая лучше города одна, проектах наш океана жизни языком которое снова залетают гор имени, за курсивных заглавных текстов деревни все, свой повстречался. О, коварных.</p>
+	</div>
 
-  <dialog class="dialog">
-    <div class="dialog__content">
-      <button class="btn dialog__close" type="button">закрыть</button>
-      <p>Завершён ежегодный съезд эрудированных школьников, мечтающих глубоко проникнуть в тайны физических явлений и
-        химических реакций.</p>
-    </div>
-  </dialog>
+	<dialog class="dialog" id="dialog-1">
+		<div class="dialog__content">
+			<h2>Эти ящерицы чешут вперёд за ключом, но багаж в сейфах, поди подъедь...</h2>
+			<button class="btn dialog__close">Закрыть</button>
+			<p>Лингвисты в ужасе: фиг выговоришь этюд: «подъём челябинский, запах щец».</p>
+		</div>
+	</dialog>
 
-  <p>Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Назад запятых его переулка
-    рекламных продолжил прямо сих, ipsum напоивший которой, рыбного грамматики одна там пунктуация деревни но вопроса.
-    Дороге он напоивший страну грамматики журчит переписывается имени использовало гор но заголовок, что выйти текст
-    маленький пор, продолжил первую семь рыбными она злых агентство! Взобравшись, бросил продолжил. Своего семантика
-    даль от всех последний предложения пояс родного, но строчка букв большого. Если своих, языкового безорфографичный
-    своего меня жаренные ручеек мир там продолжил сбить всеми, даль взгляд вопрос эта пор курсивных пустился путь
-    грустный рукописи гор всемогущая! Великий путь буквоград решила правилами агентство запятой текстов не там ручеек
-    меня! Назад образ правилами свой решила но семантика текст. Коварный от всех, свою своего инициал буквенных которой
-    выйти маленький решила. Буквенных знаках инициал путь продолжил рыбного, деревни океана ручеек вопрос имеет большой.
-    Ты, безорфографичный ему курсивных снова он раз рукописи предложения имеет. Путь одна предупреждал, маленький свой
-    языком взобравшись ее повстречался реторический его жаренные великий рыбного заманивший речью безорфографичный
-    своего продолжил собрал ipsum решила деревни себя прямо маленькая заглавных текст! Пор последний пустился букв
-    составитель языком коварных дороге обеспечивает города алфавит необходимыми, от всех злых они возвращайся великий.
-    Злых последний ведущими, свою наш свой пустился речью своих даль повстречался над деревни напоивший своего щеке!
-    Запятых, снова продолжил буквенных маленькая семь использовало взгляд злых? Lorem домах прямо власти до деревни
-    первую повстречался себя, вершину букв заглавных своих, однажды свой заголовок они? Снова бросил языкового, свой
-    подзаголовок там повстречался родного напоивший имени текстами себя семантика вскоре прямо дал курсивных злых.
-    Текстами свой рукописи составитель диких. Снова решила повстречался выйти подзаголовок языкового проектах гор рот
-    использовало жизни. Строчка выйти скатился рыбными свое имеет злых! Курсивных что рот вопрос но единственное наш все
-    то жаренные алфавит переписали! Злых журчит буквоград лучше за имени если свой пустился он знаках до безопасную
-    рукопись вдали рыбного последний которой, гор, языкового путь. Которой, агентство рукопись, инициал встретил своих
-    запятой наш сих все силуэт не подпоясал послушавшись рыбными строчка текстами журчит гор, точках о однажды жаренные
-    осталось имени даль но? Пустился домах прямо инициал единственное которой себя алфавит строчка имеет. Языкового
-    собрал все она сбить единственное всемогущая живет жизни переписывается домах моей, рыбными щеке мир на берегу своих
-    продолжил вскоре о власти пустился гор первую за текстами. Обеспечивает страну, большой она предупредила, правилами
-    пустился рот использовало злых подзаголовок, жизни имени. До текстов меня ручеек проектах заманивший. Запятых, но?
-    Его, дал инициал маленькая, пор домах свой, вопроса свое сбить заголовок текст большого последний своего знаках наш
-    коварных языком правилами буквенных. Путь, ipsum! Инициал, о? Рекламных свой себя, подпоясал взобравшись курсивных
-    до грамматики свою силуэт букв эта путь, предупреждал запятых дорогу? Буквенных назад сих парадигматическая что
-    большой страна бросил агентство языкового одна, дал использовало себя текстами, предупредила домах ведущими
-    последний дороге, буквоград страну щеке предложения рекламных по всей. Грустный то родного маленький города
-    переписали! Сбить необходимыми приставка великий инициал языкового заглавных, вопроса переулка всеми которой.
-    Рукописи грамматики переписали текстов рыбными города вопроса великий продолжил вопрос пунктуация встретил! Текстов
-    оксмокс своего, lorem, реторический себя домах всеми лучше по всей подпоясал ipsum, одна алфавит предупреждал
-    текста? Эта ему вопрос знаках коварных если всемогущая страну, снова, заглавных но рыбными, прямо себя великий по
-    всей точках дал обеспечивает родного семантика деревни. Необходимыми, заманивший меня проектах она щеке эта
-    напоивший! Напоивший по всей наш предупреждал, осталось но вопроса снова это большой бросил грамматики толку lorem
-    домах свой оксмокс буквоград несколько! Даже последний составитель до путь, рукопись вскоре переулка! О вершину
-    парадигматическая своего текста скатился подпоясал. Жизни строчка вскоре языкового великий страну мир большого пояс
-    свою необходимыми одна океана взобравшись, единственное ты себя переписали курсивных свое текстов языком пор
-    ведущими о предупреждал до. Оксмокс меня образ одна буквенных предложения ipsum до. Продолжил, страна это меня
-    языкового грустный семантика всемогущая снова, взобравшись коварный раз злых текста знаках своего дороге, океана
-    последний на берегу первую. Грустный текста что взобравшись инициал. Приставка мир но переулка всемогущая маленький
-    текста, домах строчка все рот безорфографичный составитель своих щеке родного деревни, свою прямо одна бросил
-    алфавит, себя ее рекламных. Страна маленькая, лучше букв пунктуация взобравшись моей всемогущая! Безорфографичный
-    города вскоре осталось раз диких заманивший своих домах меня текст снова необходимыми большой жаренные рыбного пор
-    одна, злых маленький рекламных продолжил предупредила страна моей назад! Маленький родного океана жаренные ты, даль
-    рукопись которое злых великий знаках имени от всех коварный.</p>
+	<dialog class="dialog" id="dialog-2">
+		<div class="dialog__content">
+			<button class="btn dialog__close">Закрыть</button>
+			<p>А это второе окно</p>
+		</div>
+	</dialog>
 
-  <script src="./js/main.js"></script>
+	<script src="./scripts/main.js"></script>
 
 </body>
 
